--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "private": true,
     "scripts":
     {
-        "dev": "next dev",
+        "dev": "next dev -p 3005",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -24,7 +24,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3.4.7",
         "typescript": "^5"
     }
 }
