--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,10 @@
         "paths":
         {
             "bitquran/assets": ["assets"],
+            "bitquran/icons": ["assets/icons"],
             "bitquran/images": ["assets/images"],
             "bitquran/styles/*": ["assets/css/*"],
             "bitquran/components": ["components"],
-            "bitquran/pages": ["pages"],
             "bitquran/services/actions": ["services/actions"],
             "bitquran/services/*": ["services/*"],
             "bitquran/hooks": ["utils/@hooks"],
