refactor: directory structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,14 @@
             "bitquran/images": ["assets/images"],
             "bitquran/styles/*": ["assets/css/*"],
             "bitquran/components": ["components"],
-            "bitquran/services/actions": ["services/actions"],
+            "bitquran/services/api": ["services/api"],
+            "bitquran/services/slices": ["services/slices"],
+            "bitquran/services/store": ["services/store"],
             "bitquran/services/*": ["services/*"],
-            "bitquran/hooks": ["utils/@hooks"],
-            "bitquran/types": ["utils/@types"],
-            "bitquran/utils": ["utils"],
+            "bitquran/shared/constants": ["shared/constants"],
+            "bitquran/shared/hooks": ["shared/hooks"],
+            "bitquran/shared/types": ["shared/types"],
+            "bitquran/shared/utils": ["shared/utils"],
             "bitquran/package": ["../package.json"],
         }
     },
