feat: upgrade project to React v19 and add support for TypeScript, TailwindCSS, and pnpm
BREAKING CHANGE: changing the way the application interacts with APIs.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-REACT_APP_API_URL = 
+# Environment Variables
+VITE_APP_PORT                = 
+VITE_APP_URL                 = 
+VITE_API_URL                 = 
+VITE_ASSETS_URL              = 
+VITE_BROWSER_MIND_SECRET_KEY = 
