--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "class-variance-authority": "^0.7.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^7.6.3",
         "tailwindcss": "^4.1.11"
     },
     "devDependencies": {
